2002-06-03  Arjan Molenaar  <arjanmolenaar@hetnet.nl>
	
	* setup.py: first do a pygtk.require() before config_Gaphor.

2002-06-01  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	(here, only the most important changes are noted)
	* gaphor/diagram/classifier.py, diagramline.py: new class
	* gaphor/diagram/*.py: updated Actor, Package, Dependency, Comment,
	CommentLine, Generalization, UseCase: now work with the new datamodel
	* gaphor/UML/element.py: Notify signals are send using GTK+ like
	signals (element, param_spec). All other objects are updated to work
	with it.
	
2002-05-30  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* setup.py: added run --testfile option
	* gaphor/ui/namespace.py: fix ownedMember remove actions
	* tests/test-ns.py: added tests for NamespaceModel
	* tests/test-properties.py: fixed tests.
	
2002-05-19  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/diagram/actor.py, modelelement.py, diagramitem.py:
	make ActorItem kinda work...

2002-05-03  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* updated doc/UML2.gaphor to third release of UML 2.0 proposal.
	* did lots of other updates.

2002-05-03  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* all files: Implementing UML2 data model based on the data
	in doc/UML2.gaphor (use gaphor-0.2.0 to read it).

2002-03-31  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* setup.py: check versions of modules.

2002-03-22  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/diagram/association.py: fixed bug that didn't show
	aggregation properly when a diagram was loaded.

2002-03-02  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* setup.py, setup.cfg: Distutils setup scripts.
	* utils/build_mo.py, utils/install_mo.py, utils/dist_mo.py,
	utils/build_pot.py:
	Distutils commands for supporting gettext files (.pot/po, .mo)
	* autogen.sh, configure.in, */Files */Makefile.am:
	These files are obsolete now.
	* run-gaphor.sh: Run Gaphor, replaces gaphor.sh.
	* gaphor/config.py.in: obsolete and removed.
